# Restful_api

./: .env  Cargo.toml
actix_test/: Cargo.toml
actix_test/src/: main.rs
axum_pro/src/: main.rs
axum_test/: Cargo.toml
axum_test/src/: main.rs
restful_api/: Cargo.toml  db.sql
restful_api/src/: errors.rs  state.rs
restful_api/src/dbaccess/: course.rs  teacher.rs
restful_api/src/handler/: course.rs  general.rs  teacher.rs
restful_api/src/models/: course.rs  teacher.rs
restful_api_test/: Cargo.toml
restful_api_test/src/: handlers.rs  models.rs  state.rs
