[package]
name = "restful_api_test"
version = "0.1.0"
edition = "2024"
default-run = "teacher_service"
[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
actix-rt = "2.11.0"
dotenvy = "0.15.7"
openssl = { version = "0.10", features = ["vendored"] }
sqlx = { version = "0.8.6", features = ["postgres","runtime-tokio-rustls","macros","chrono"]}
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
serde_json = "1.0.145"
[[bin]]
name = "teacher_service"
